# scs-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.cpp  scs-demo.cbp  small_lp  small_qp
example/: degenerate.cpp  minunit.h  problem_utils.h  rng.h  small_lp.cpp  small_qp.cpp
